fixed z-index

--- a/hw7-grid/css.css
+++ b/hw7-grid/css.css
@@ -165,6 +165,7 @@ a {
     top: 140px;
     right: 0;
     filter: drop-shadow(0px 10px 20px rgba(17, 17, 17, 0.1));
+    z-index: -1;
 }
 
 .bgBlue {
@@ -174,7 +175,7 @@ a {
     position: absolute;
     top: 0;
     right: 0;
-    z-index: -1;
+    z-index: -2;
 }
 
 .iconService {
